--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,34 @@ h1 {
   padding: 5px;
   margin: 10px;
 }
+
+#circle {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  height: 100px;
+  background: black;
+  border-radius: 50%;
+  position: relative;
+}
+
+#innercircle {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50px;
+  height: 50px;
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 10%;
+  left: 25%;
+}
+
+#eight {
+  font-size: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  position:relative;
+  text-align: center;
+  top: 5%;
+}
