--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
 body {
+  color: rgb(255, 7, 255);
   margin: 1%;
   text-align: center;
   font-family: "Anton", sans-serif;
   height: 90vh;
+  background-image: url('https://images.unsplash.com/photo-1592215955539-f020e64a7125?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Zm9ydHVuZSUyMHRlbGxlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 h1 {
   text-decoration: underline;
+  font-size: 40px;
+}
+p {
   font-size: 40px;
 }
 
@@ -44,4 +51,6 @@ h1 {
   position:relative;
   text-align: center;
   top: 5%;
+  color: black;
 }
+
